@@ -207,11 +207,11 @@ public class ProtocolServiceLocalImpl extends BaseServiceLocalImpl implements Pr
 	}
 
 	public List<ProtocolBean> findProtocolsBy(String protocolType,
-			String protocolName, String protocolAbbreviation, String fileTitle)
+			String protocolName, String protocolAbbreviation, String fileTitle, String doi)
 			throws ProtocolException {
 		List<ProtocolBean> protocolBeans = new ArrayList<ProtocolBean>();
 		try {
-			List<Protocol> protocols = protocolServiceHelper.findProtocolsBy(protocolType, protocolName, protocolAbbreviation, fileTitle);
+			List<Protocol> protocols = protocolServiceHelper.findProtocolsBy(protocolType, protocolName, protocolAbbreviation, fileTitle, doi);
 			Collections.sort(protocols, new Comparators.ProtocolDateComparator());
 			for (Protocol protocol : protocols) {
 				// don't need to load accessibility
@@ -284,7 +284,7 @@ public class ProtocolServiceLocalImpl extends BaseServiceLocalImpl implements Pr
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria.forClass(Characterization.class).setProjection(Projections.distinct(Property.forName("id")));
 		crit.createAlias("protocol", "protocol");
-		crit.add(Property.forName("protocol.id").eq(new Long(protocolId)));
+		crit.add(Property.forName("protocol.id").eq(Long.valueOf(protocolId)));
 		List results = appService.query(crit);
 		List<Long> ids = new ArrayList<Long>();
 		for (int i = 0; i< results.size(); i++) {
@@ -299,7 +299,7 @@ public class ProtocolServiceLocalImpl extends BaseServiceLocalImpl implements Pr
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria.forClass(Characterization.class);
 		crit.createAlias("protocol", "protocol");
-		crit.add(Property.forName("protocol.id").eq(new Long(protocolId)));
+		crit.add(Property.forName("protocol.id").eq(Long.valueOf(protocolId)));
 		List results = appService.query(crit);
 		List<Characterization> chars = new ArrayList<Characterization>();
 		for (int i = 0; i< results.size(); i++) {
@@ -422,7 +422,7 @@ public class ProtocolServiceLocalImpl extends BaseServiceLocalImpl implements Pr
 		} else {
 			protocolType = null; // update if in vivo is implemented
 		}
-		List<ProtocolBean> protocols = findProtocolsBy(protocolType, null, null, null);
+		List<ProtocolBean> protocols = findProtocolsBy(protocolType, null, null, null, null);
 		request.getSession().setAttribute("characterizationProtocols", protocols);
 		return protocols;
 	}
@@ -430,7 +430,7 @@ public class ProtocolServiceLocalImpl extends BaseServiceLocalImpl implements Pr
 	public List<ProtocolBean> getSynthesisProtocols(HttpServletRequest request) throws Exception {
 		String protocolType = "synthesis";
 
-		List<ProtocolBean> protocols = findProtocolsBy(protocolType, null, null, null);
+		List<ProtocolBean> protocols = findProtocolsBy(protocolType, null, null, null, null);
 		request.getSession().setAttribute("synthesisProtocols", protocols);
 		return protocols;
 	}
