@@ -416,7 +416,7 @@ public class AdvancedSampleServiceHelper
 		// load sample first with point of contact info and function info and
 		// datum info
 		DetachedCriteria crit = DetachedCriteria.forClass(Sample.class).add(
-				Restrictions.eq("id", new Long(sampleId)));
+				Restrictions.eq("id", Long.valueOf(sampleId)));
 		crit.setFetchMode("primaryPointOfContact", FetchMode.JOIN);
 		crit.setFetchMode("primaryPointOfContact.organization", FetchMode.JOIN);
 		crit.setFetchMode("otherPointOfContactCollection", FetchMode.JOIN);
@@ -474,7 +474,7 @@ public class AdvancedSampleServiceHelper
 		if (searchBean.getCharacterizationQueries().isEmpty()) {
 			return chars;
 		}
-		Long id = new Long(sampleId);
+		Long id = Long.valueOf(sampleId);
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider
 				.getApplicationService();
 		if (searchBean.getCharacterizationQueries().size() == 1
@@ -572,7 +572,7 @@ public class AdvancedSampleServiceHelper
 		}
 		// datum value
 		if (!StringUtils.isEmpty(charQuery.getDatumValue())) {
-			Float datumValue = new Float(charQuery.getDatumValue());
+			Float datumValue = Float.valueOf(charQuery.getDatumValue());
 			datumCrit = Restrictions.and(datumCrit, Restrictions.eq(
 					"valueUnit", charQuery.getDatumValueUnit()));
 			if ("=".equals(charQuery.getOperand())) {
@@ -657,7 +657,7 @@ public class AdvancedSampleServiceHelper
 		if (!searchBean.getHasAgentMaterial()) {
 			return entities;
 		}
-		Long id = new Long(sampleId);
+		Long id = Long.valueOf(sampleId);
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider
 				.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria
@@ -725,7 +725,7 @@ public class AdvancedSampleServiceHelper
 		if (!searchBean.getHasFunction()) {
 			return functions;
 		}
-		Long id = new Long(sampleId);
+		Long id = Long.valueOf(sampleId);
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider
 				.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria.forClass(Function.class);
@@ -800,7 +800,7 @@ public class AdvancedSampleServiceHelper
 			String sampleId, AdvancedSampleSearchBean searchBean)
 			throws Exception {
 		List<NanomaterialEntity> entities = new ArrayList<NanomaterialEntity>();
-		Long id = new Long(sampleId);
+		Long id = Long.valueOf(sampleId);
 		if (!searchBean.getHasNanomaterial()) {
 			return entities;
 		}
@@ -965,7 +965,7 @@ public class AdvancedSampleServiceHelper
 		}
 		// datum value
 		if (!StringUtils.isEmpty(charQuery.getDatumValue())) {
-			Float datumValue = new Float(charQuery.getDatumValue());
+			Float datumValue = Float.valueOf(charQuery.getDatumValue());
 			if(!(charQuery.getDatumValueUnit().isEmpty())) {
 				charCrit = Restrictions.and(charCrit, Restrictions.eq(
 						"datum.valueUnit", charQuery.getDatumValueUnit()));
@@ -1678,29 +1678,28 @@ public class AdvancedSampleServiceHelper
 			AdvancedSampleSearchBean searchBean, DetachedCriteria crit) throws Exception {
 		for (CompositionQueryBean query : searchBean.getCompositionQueries()) {
 			if (query.getCompositionType().equals("nanomaterial entity")) {
-				DetachedCriteria subCrit = getNanomaterialEntitySubquery(query,
-						"nanoEntity.", "id");
+				DetachedCriteria subCrit = getNanomaterialEntitySubquery(query, "nanoEntity.", "id");
 				crit.add(Subqueries.exists(subCrit));
 			}
 		}
 	}
 
-	private DetachedCriteria getNanomaterialEntitySubquery(
-			CompositionQueryBean query, String nanoEntityAlias,
-			String projectionProperty) throws Exception {
-		DetachedCriteria subCrit = DetachedCriteria.forClass(
-				NanomaterialEntity.class, "subCrit");
-		subCrit.setProjection(Projections.distinct(Property
-				.forName(projectionProperty)));
+	private DetachedCriteria getNanomaterialEntitySubquery(CompositionQueryBean query,
+														   String nanoEntityAlias,
+														   String projectionProperty) throws Exception {
+		DetachedCriteria subCrit = DetachedCriteria.forClass(NanomaterialEntity.class, "subCrit");
+		subCrit.setProjection(Projections.distinct(Property.forName(projectionProperty)));
 		// join composing element
+		System.out.println("AdvancedSampleServiceHelper.java getChemicalName: " + query.getChemicalName());
+		System.out.println("AdvancedSampleServiceHelper.java getDisplayName: " + query.getDisplayName());
+		System.out.println("AdvancedSampleServiceHelper.java getEntityType: " + query.getEntityType());
+
 		if (!StringUtils.isEmpty(query.getChemicalName())) {
-			subCrit.createAlias("subCrit.composingElementCollection",
-					"compElement", CriteriaSpecification.LEFT_JOIN);
+			subCrit.createAlias("subCrit.composingElementCollection", "compElement", CriteriaSpecification.LEFT_JOIN);
 		}
 		Criterion nanoCrit = getNanomaterialEntityCriterion(query, "");
 		subCrit.add(nanoCrit);
-		subCrit.add(Restrictions.eqProperty("subCrit." + projectionProperty,
-				nanoEntityAlias + "id"));
+		subCrit.add(Restrictions.eqProperty("subCrit." + projectionProperty, nanoEntityAlias + "id"));
 		return subCrit;
 	}
 
